# qtwebengine_snap

./: CMakeLists.txt  mainwindow.h  mainwindow.ui
snap/: snapcraft.yaml
snap/snap/gui/: qtwebengine_snap.desktop
